--- a/index.html
+++ b/index.html
@@ -3,29 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hiddify Warp download page with instructions and subscription link.">
+    <meta name="keywords" content="Hiddify, Warp, download, subscription">
+    <meta name="author" content="3yed">
     <title>Hiddify Warp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
-            height: 100vh;
             background-color: #282c34;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: #f1f1f1;
             display: flex;
-            justify-content: center;
-            align-items: center;
             flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
             margin: 0;
+            min-height: 100vh;
         }
 
         .logo {
-            margin-bottom: 50px;
+            margin: 20px 0;
         }
 
         .logo img {
             width: 100px;
             height: auto;
-            margin-bottom: 100px;
         }
 
         .container {
@@ -39,7 +41,11 @@
             animation: fadeIn 1s ease-in-out;
             overflow: hidden;
         }
-
+		
+        .container:hover {
+            box-shadow: 0 16px 24px rgba(0, 0, 0, 0.5);
+        }
+		
         details {
             border: 1px solid #666;
             border-radius: 6px;
@@ -65,6 +71,12 @@
 
         a {
             text-decoration: none;
+            color: #1e90ff;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #6495ed;
         }
 
         @keyframes fadeIn {
@@ -83,24 +95,59 @@
         img:hover {
             transform: scale(1.05);
         }
+
+        footer {
+            background-color: #3b3f46;
+            padding: 10px 20px;
+            width: 97%;
+            text-align: center;
+            color: #ccc;
+            font-size: 0.9em;
+            border-radius: 12px 12px 0 0;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.4);
+        }
+
+        @media (min-width: 768px) {
+            .container {
+                max-width: 600px;
+            }
+
+            .logo img {
+                width: 120px;
+            }
+        }
+
+        @media (max-width: 767px) {
+            .container {
+                padding: 15px;
+            }
+
+            details {
+                font-size: 0.9em;
+            }
+
+            footer {
+                font-size: 0.8em;
+            }
+        }
     </style>
 </head>
 <body>
 <div class="logo">
-    <img src="https://raw.githubusercontent.com/hiddify/hiddify-next/main/assets/images/tray_icon_connected.png" alt="Logo">
+    <img src="https://raw.githubusercontent.com/hiddify/hiddify-next/main/assets/images/tray_icon_connected.png" alt="Hiddify Warp Logo">
 </div>
 
 <div class="container">
     <details>
         <summary>DOWNLOAD APP</summary>
-        <a href="https://github.com/hiddify/hiddify-next/releases" target="_blank">
-            <img src="https://raw.githubusercontent.com/hiddify/hiddify-next/main/assets/images/tray_icon_dark.png" alt="Sample Image">
+        <a href="https://github.com/hiddify/hiddify-next/releases" target="_blank" rel="noopener noreferrer">
+            <img src="https://raw.githubusercontent.com/hiddify/hiddify-next/main/assets/images/tray_icon_dark.png" alt="Download Hiddify Warp">
         </a>
         </br>
         <h6>And Install</h6>
     </details>
     <details>
-        <summary>COPY SUB </summary>
+        <summary>COPY SUB</summary>
         <h6>Sub Link</h6>
         </br>
         <a href="#" onclick="copyToClipboard('https://raw.githubusercontent.com/3yed-61/warpsub/main/export/warp')">
@@ -109,14 +156,18 @@
     </details>
     <details>
         <summary>Final</summary>
-        <img src="https://raw.githubusercontent.com/3yed-61/warpsub/main/images/1.png" alt="Sample Image">
+        <img src="https://raw.githubusercontent.com/3yed-61/warpsub/main/images/1.png" alt="Step 1 of final instructions">
         <br/>
-        <img src="https://raw.githubusercontent.com/3yed-61/warpsub/main/images/2.png" alt="Sample Image">
+        <img src="https://raw.githubusercontent.com/3yed-61/warpsub/main/images/2.png" alt="Step 2 of final instructions">
         </br>
         </br>
         <p>And that's it</p>
     </details>
 </div>
+
+<footer>
+    &copy; 2024 3λΞĐ <a href="https://github.com/3yed-61" class="social-link"><i class="fa-brands fa-github"></i></a>
+</footer>
 
 <script>
 function copyToClipboard(text) {
@@ -126,7 +177,9 @@ function copyToClipboard(text) {
         console.error('Could not copy text: ', err);
     });
 }
-    document.querySelectorAll('details').forEach(detail => {
+
+// Close other details when one is opened
+document.querySelectorAll('details').forEach(detail => {
     detail.addEventListener('toggle', function() {
         if (this.open) {
             document.querySelectorAll('details').forEach(otherDetail => {
