--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hiddify Warp download page with instructions and subscription link.">
     <meta name="keywords" content="Hiddify, Warp, download, subscription">
-    <meta name="author" content="3yed">
+    <meta name="author" content="Your Name">
     <title>Hiddify Warp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -15,7 +15,7 @@
             color: #f1f1f1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             margin: 0;
             min-height: 100vh;
@@ -35,17 +35,17 @@
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
             text-align: center;
-            max-width: 400px;
             width: 100%;
+            max-width: 400px;
             padding: 20px;
             animation: fadeIn 1s ease-in-out;
             overflow: hidden;
         }
-		
+         
         .container:hover {
             box-shadow: 0 16px 24px rgba(0, 0, 0, 0.5);
         }
-		
+
         details {
             border: 1px solid #666;
             border-radius: 6px;
@@ -99,12 +99,26 @@
         footer {
             background-color: #3b3f46;
             padding: 10px 20px;
-            width: 90%;
+            width: 100%;
             text-align: center;
             color: #ccc;
             font-size: 0.9em;
             border-radius: 12px 12px 0 0;
             box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.4);
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .social-link {
+            color: #f1f1f1;
+            margin-left: 5px;
+            transition: color 0.3s ease;
+        }
+
+        .social-link:hover {
+            color: #1e90ff;
         }
 
         @media (min-width: 768px) {
@@ -119,7 +133,8 @@
 
         @media (max-width: 767px) {
             .container {
-                padding: 10px;
+                max-width: 100%;
+                padding: 15px;
             }
 
             details {
