--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hiddify Warp download page with instructions and subscription link.">
     <meta name="keywords" content="Hiddify, Warp, download, subscription">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="3yed">
     <title>Hiddify Warp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
