--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             color: #f1f1f1;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             margin: 0;
             min-height: 100vh;
@@ -35,17 +35,17 @@
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
             text-align: center;
-            width: 100%;
             max-width: 400px;
+            width: 100%;
             padding: 20px;
             animation: fadeIn 1s ease-in-out;
             overflow: hidden;
         }
-         
+		
         .container:hover {
             box-shadow: 0 16px 24px rgba(0, 0, 0, 0.5);
         }
-
+		
         details {
             border: 1px solid #666;
             border-radius: 6px;
@@ -99,26 +99,13 @@
         footer {
             background-color: #3b3f46;
             padding: 10px 20px;
-            width: 100%;
+            width: 97%;
             text-align: center;
             color: #ccc;
             font-size: 0.9em;
             border-radius: 12px 12px 0 0;
             box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.4);
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            z-index: 1000;
-        }
-
-        .social-link {
-            color: #f1f1f1;
-            margin-left: 5px;
-            transition: color 0.3s ease;
-        }
-
-        .social-link:hover {
-            color: #1e90ff;
+			
         }
 
         @media (min-width: 768px) {
@@ -133,7 +120,6 @@
 
         @media (max-width: 767px) {
             .container {
-                max-width: 100%;
                 padding: 15px;
             }
 
