--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             justify-content: space-between;
             align-items: center;
             margin: 0;
-            min-height: 100vh;
+            min-height: 100svh;
         }
 
         .logo {
