--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         }
 
         .logo {
-            margin: 10px 0;
+            margin: 20px 0;
         }
 
         .logo img {
             width: 100px;
-            height: auto;
+            height: auto;	
         }
 
         .container {
@@ -108,9 +108,9 @@
 			
         }
 
-        @media (min-width: 767px) {
+        @media (min-width: 768px) {
             .container {
-                max-width: 590px;
+                max-width: 500px;
             }
 
             .logo img {
@@ -149,11 +149,14 @@
     </details>
     <details>
         <summary>COPY SUB</summary>
-        <h6>Sub Link</h6>
         </br>
         <a href="#" onclick="copyToClipboard('https://raw.githubusercontent.com/3yed-61/warpsub/main/export/warp')">
-            <i class="fa-3x fa-duotone fa-solid fa-copy"></i>
+        <i class="fa-3x fa-duotone fa-solid fa-copy"></i>
         </a>
+		</br>
+		<h6>Or Scan The Qrcode ⬇️</h6>
+		
+		<a href="https://github.com/3yed-61/warpsub"target="_blank" class="social-link"><i class="fa-brands fa-github"></i></a>
     </details>
     <details>
         <summary>Final</summary>
@@ -167,7 +170,9 @@
 </div>
 
 <footer>
-    &copy; 2024 3λΞĐ <a href="https://github.com/3yed-61" class="social-link"><i class="fa-brands fa-github"></i></a>
+    Made with 💜 3λΞĐ  <a href="https://github.com/3yed-61" class="social-link"><i class="fa-brands fa-github"></i></a>
+        
+        
 </footer>
 
 <script>
