--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		<a href="https://github.com/3yed-61/warpsub"target="_blank" class="social-link"><i class="fa-brands fa-github"></i></a>
     </details>
     <details>
-        <summary>Final</summary>
+        <summary>Finally</summary>
         <img src="https://raw.githubusercontent.com/3yed-61/warpsub/main/images/1.png" alt="Step 1 of final instructions">
         <br/>
         <img src="https://raw.githubusercontent.com/3yed-61/warpsub/main/images/2.png" alt="Step 2 of final instructions">
@@ -170,9 +170,7 @@
 </div>
 
 <footer>
-    Made with 💜 3λΞĐ  <a href="https://github.com/3yed-61" class="social-link"><i class="fa-brands fa-github"></i></a>
-        
-        
+  Made with 💜 3λΞĐ  <a href="https://github.com/3yed-61" class="social-link"><i class="fa-brands fa-github"></i></a> 
 </footer>
 
 <script>
@@ -184,7 +182,7 @@ function copyToClipboard(text) {
     });
 }
 
-// Close other details when one is opened
+
 document.querySelectorAll('details').forEach(detail => {
     detail.addEventListener('toggle', function() {
         if (this.open) {
