--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="footer-column">
             <h4>Follow Me</h4>
             <div class="social-links">
-                <a href="https://github.com/3yed-61/warpsub" target="_blank" class="social-link">
+                <a href="https://github.com/3yed-61" target="_blank" class="social-link">
                     <i class="fab fa-github"></i>
                 </a>
                 <a href="https://x.com/_3yed_" target="_blank" class="social-link">
