--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
                 <a href="https://x.com/_3yed_" target="_blank" class="social-link">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="https://www.instagram.com/_.3yed._" target="_blank" class="social-link" id="instagram-link">
-                    <i class="fab fa-instagram"></i>
+                <a href="https://t.me/talk_to_3yed_bot" target="_blank" class="social-link" id="instagram-link">
+                    <i class="fab fa-telegram"></i>
                 </a>
             </div>
         </div>
